This is First Commit

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
                         <td>Ramana</td>
                         <td>12345</td>
                         <td>IT</td>
-                        <td><img src="./ramana photo.jpeg" alt="John's Profile"></td>
+                        <td><img src="./ramana photo.jpeg" alt="Ramana's Profile"></td>
                     </tr>
 
                     <tr>
                         <td>Sai</td>
                         <td>54321</td>
                         <td>IT</td>
-                        <td><img src="https://via.placeholder.com/50" alt="John's Profile"></td>
+                        <td><img src="https://via.placeholder.com/50" alt="Sai's Profile"></td>
                     </tr>
 
                     <tr>
                         <td>Nagendra</td>
                         <td>420</td>
                         <td>IT</td>
-                        <td><img src="https://via.placeholder.com/50" alt="John's Profile"></td>
+                        <td><img src="https://via.placeholder.com/50" alt="Nagendra's Profile"></td>
                     </tr>
 
                 </tbody>
